[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/SpaceShipSprite.png" type="Texture" id=1]
[ext_resource path="res://Scripts/SpaceShip.gd" type="Script" id=2]
[ext_resource path="res://Scenes/AfterBurnSprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Sprites/LightSprite.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "AfterBurnAnim"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("AfterBurnSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.1, 0.5, 0.9 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 38, 38 )

[node name="SpaceShip" type="KinematicBody2D"]
collision_layer = 2147483651
collision_mask = 12
script = ExtResource( 2 )
speed = 350.0
acceleration = 0.7
friction = 0.1
damage = 3

[node name="PLayerSprite" type="Sprite" parent="."]
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 1 )

[node name="AfterBurnSprite" parent="." instance=ExtResource( 3 )]

[node name="AfterBurnAnimPLayer" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/AfterBurnAnim = SubResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 3
collision_mask = 12

[node name="CollisionShape2D" parent="HurtBox" index="0"]
visible = false
position = Vector2( 0, -5 )
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, 53 )
rotation = 3.14159
texture = ExtResource( 5 )

[node name="shoot_delay" type="Timer" parent="."]
wait_time = 0.4
autostart = true
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="shoot_delay" to="." method="_on_shoot_delay_timeout"]

[editable path="HurtBox"]
